# delta-sharing-server-rs

./: .gitignore  Cargo.toml  README.md  build.rs  shares.yaml
.github/workflows/: rust.yml
.metals/: metals.lock.db  metals.mv.db
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/authentication/: README.md  custom.md  public_access.md
docs/src/catalog/: README.md  dynamo.md  file.md  postgres.md
docs/src/guide/: getting_started.md
examples/: config.yaml  dynamo_delta_axum.rs  quickstart.rs
src/: error.rs  extract.rs  handler.rs  lib.rs  main.rs  response.rs  router.rs  state.rs
src/auth/: mod.rs  public.rs
src/catalog/: ddb.rs  dynamo.rs  file.rs  mod.rs  mysql.rs  postgres.rs
src/catalog/dynamo/: condition.rs  config.rs  convert.rs  mod.rs  model.rs  pagination.rs
src/catalog/file/: config.rs  mod.rs  model.rs
src/catalog/postgres/: convert.rs  mod.rs  model.rs  pagination.rs
src/manager/: dynamo.rs  file.rs  mod.rs  mysql.rs  postgres.rs
src/manager/mysql/: mod.rs
src/manager/postgres/: mod.rs
src/protocol/: action.rs  mod.rs  securable.rs  securables.rs  share.rs  table.rs
src/protocol/snapshots/: delta_sharing_server__protocol__action__tests__serialize_file.snap
src/reader/: action.rs  delta.rs  mod.rs  simple.rs
src/response/: delta.rs  mod.rs  parquet.rs
src/response/snapshots/: delta_sharing_server__response__delta__test__build_delta_metadata_line.snap  delta_sharing_server__response__delta__test__build_delta_protocol_line.snap  delta_sharing_server__response__delta__test__delta_file_line.snap  delta_sharing_server__response__delta__test__sign_delta_file_line_absolute_deletion_vector.snap  delta_sharing_server__response__delta__test__sign_delta_file_line_inline_deletion_vector.snap  delta_sharing_server__response__delta__test__sign_delta_file_line_relative_deletion_vector.snap  delta_sharing_server__response__delta__test__sign_delta_file_line_without_deletion_vector.snap  delta_sharing_server__response__parquet__test__build_file_parquet_line.snap  (+4 more)
src/share_reader/: file.rs  mod.rs
src/signer/: mod.rs  noop.rs  registry.rs  s3.rs
src/snapshots/: delta_sharing_server__state__test__get_share.snap  delta_sharing_server__state__test__get_share.snap.new  delta_sharing_server__state__test__get_table_data.snap  delta_sharing_server__state__test__get_table_data.snap.new  delta_sharing_server__state__test__get_table_version.snap  delta_sharing_server__state__test__get_table_version.snap.new  delta_sharing_server__state__test__list_schemas.snap  delta_sharing_server__state__test__list_schemas.snap.new  delta_sharing_server__state__test__list_shares.snap  delta_sharing_server__state__test__list_shares.snap.new  delta_sharing_server__state__test__list_shares_with_pagination.snap  delta_sharing_server__state__test__list_tables_in_schema.snap  delta_sharing_server__state__test__list_tables_in_schema.snap.new  delta_sharing_server__state__test__list_tables_in_share.snap.new  delta_sharing_server_rs__state__test__get_table_data.snap  delta_sharing_server_rs__state__test__get_table_metadata.snap  delta_sharing_server_rs__state__test__list_shares_with_pagination-2.snap
tests/: api.rs  catalog_postgres.rs  ddb.rs  dynamo_catalog.rs  manager.rs  pg_internal.rs  query_table.rs  signers.rs  table_manager.rs  table_manager_dynamo.rs  table_manager_mysql.rs  table_manager_pg.rs
tests/common/: api.rs  catalog.rs  exp.rs  macros.rs  mod.rs  server.rs  table_manager.rs
tests/snapshots/: api__get_share_not_found.snap  api__get_share_not_found.snap.new  api__get_share_success.snap  api__get_table_data_success.snap  api__get_table_data_success.snap.new  api__get_table_metadata_success.snap  api__get_table_metadata_success.snap.new  api__get_table_version_latest_success.snap  api__list_schemas_success.snap  api__list_schemas_success.snap.new  api__list_shares_bad_page_token.snap  api__list_shares_bad_page_token.snap.new  api__list_shares_pagination-2.snap  api__list_shares_pagination.snap  api__list_shares_pagination.snap.new  api__list_shares_success.snap  api__list_shares_success.snap.new  api__list_tables_in_schema_success.snap  api__list_tables_in_schema_success.snap.new  api__list_tables_in_share_success.snap
(+19 files in other folders)
