[package]
name = "delta-sharing-server-rs"
version = "0.1.0"
authors = ["Tim Dikland <timdikland@gmail.com>"]
license = "Apache-2.0"
description = "Delta Sharing server library"
readme = "README.md"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.68"
aws-sdk-dynamodb = "0.27.0"
aws-sdk-s3 = "0.27.0"
axum = "0.6.18"
axum-macros = "0.3.7"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = "0.4.24"
deltalake = { version = "0.11.0", features = ["s3"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
mockall = "0.11.4"

[dev-dependencies]
aws-config = "0.55.2"
axum-macros = "0.3.7"
insta = { version = "1.29.0", features = ["json"] }
reqwest = "0.11.17"
tokio = "1.28.0"
tower = "0.4.13"
