[package]
name = "delta-sharing-server"
version = "0.1.0"
authors = ["Tim Dikland <timdikland@gmail.com>"]
license = "Apache-2.0"
description = "Delta Sharing server library"
readme = "README.md"
edition = "2021"
keywords = ["delta", "delta-sharing", "delta-sharing-server"]
categories = ["database", "web-programming"]
repository = "https://github.com/tdikland/delta-sharing-server-rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.68"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-s3 = "0.28.0"
axum = "0.6.18"
axum-macros = "0.3.7"
base64 = "0.21.0"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
deltalake = { version = "0.12.0", features = ["s3"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "uuid",
    "postgres",
    "mysql",
] }
uuid = { version = "1.3.3", features = ["v4"] }
url = "2.3.1"
tracing = "0.1.37"
serde_yaml = "0.9.22"

[dev-dependencies]
tracing-subscriber = "0.3.17"
mockall = "0.11.4"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.17", features = ["rustls-tls"] }
axum-macros = "0.3.7"
insta = { version = "1.29.0", features = ["json"] }
tower = "0.4.13"

[[example]]
name = "dynamo-delta-axum"
path = "examples/dynamo_delta_axum.rs"
