[package]
name = "delta-sharing-server"
version = "0.0.1"
authors = ["Tim Dikland <timdikland@gmail.com>"]
license = "Apache-2.0"
description = "Delta Sharing server library"
readme = "README.md"
edition = "2021"
keywords = ["delta", "delta-sharing", "delta-sharing-server"]
categories = ["database", "web-programming"]
repository = "https://github.com/tdikland/delta-sharing-server-rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.68"
aws-config = "1.1"
aws-sdk-dynamodb = "1.14.0"
aws-sdk-s3 = "1.14.0"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
deltalake = { version = "0.17.1", features = ["s3"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "uuid",
    "postgres",
    "mysql",
] }
uuid = { version = "1.3.3", features = ["v4"] }
url = "2.3.1"
tracing = "0.1.37"
serde_yaml = "0.9.22"
tower-http = { version = "0.5.2", features = ["trace"] }
futures-util = "0.3.28"
pin-project = "1.1.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
futures = "0.3.28"
tower = "0.4.13"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = [
    "dynamodb",
    "postgres",
] }
http = "1"

[dev-dependencies]
tracing-subscriber = "0.3.17"
mockall = "0.12.1"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.25", features = ["rustls-tls"] }
axum-macros = "0.4.1"
insta = { version = "1.29.0", features = ["json", "filters"] }
tower = "0.4.13"
tempfile = "3.6.0"
aws-smithy-runtime = { version = "1", features = ["test-util"] }
http = "1"
axum-test = "14"

[[example]]
name = "dynamo-delta-axum"
path = "examples/dynamo_delta_axum.rs"
